refactor commons assertions and api-interactor